--- a/content/themes/casper/default.hbs
+++ b/content/themes/casper/default.hbs
@@ -23,6 +23,8 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!-- RTL support for Bootstrap -->
+    <link rel="stylesheet" href="//cdn.rawgit.com/morteza/bootstrap-rtl/master/dist/cdnjs/3.3.1/css/bootstrap-rtl.min.css">
 
 </head>
 <body class="{{body_class}} nav-closed">
