--- a/content/themes/casper/default.hbs
+++ b/content/themes/casper/default.hbs
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <!-- RTL support for Bootstrap -->
     <link rel="stylesheet" href="//cdn.rawgit.com/morteza/bootstrap-rtl/master/dist/cdnjs/3.3.1/css/bootstrap-rtl.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{{asset "css/creative.css"}}" type="text/css"/>
 
 </head>
 <body class="{{body_class}} nav-closed">
@@ -51,6 +53,11 @@
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <!-- Bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="{{asset "js/jquery.fittext.js"}}"></script>
+    <script src="{{asset "js/wow.min.js"}}"></script>
+    <script src="{{asset "js/jquery.easing.min.js"}}"></script>
+    <script src="{{asset "js/creative.js"}}"></script>
 
 </body>
 </html>
