--- a/content/themes/casper/assets/css/screen.css
+++ b/content/themes/casper/assets/css/screen.css
@@ -704,8 +704,8 @@ body.nav-opened .nav {
 .no-cover.main-header {
     min-height: 160px;
     max-height: 40vh;
-    background: #f5f8fa;
-    background-image: url(../header2.jpg);
+    background: #303030;
+    
 }
 
 .no-cover .page-title {
