--- a/content/themes/casper/index.hbs
+++ b/content/themes/casper/index.hbs
@@ -13,7 +13,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">الأستاذ العربي بوعمران | موثق</a>
+                <a class="navbar-brand page-scroll" href="#page-top">مدونة الأستاذ العربي بوعمران</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
