--- a/content/themes/casper/assets/css/screen.css
+++ b/content/themes/casper/assets/css/screen.css
@@ -702,9 +702,9 @@ body.nav-opened .nav {
 }
 
 .no-cover.main-header {
-    min-height: 160px;
-    max-height: 40vh;
-    background: #303030;
+    min-height: 60px;
+    max-height: 0vh;
+    background: #000;
     
 }
 
@@ -1188,7 +1188,7 @@ body:not(.post-template) .post-title {
 }
 .read-next-story:hover .post:before {
     color: #222;
-    background: #fff;
+    background: #4C4C4C;
     transition: all 0.2s ease;
 }
 
@@ -1205,8 +1205,8 @@ body:not(.post-template) .post-title {
 }
 
 .read-next-story .post {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 .read-next-story .post:before {
@@ -1236,7 +1236,7 @@ body:not(.post-template) .post-title {
 
 /* Special styles for posts with no cover images */
 .read-next-story.no-cover {
-    background: #f5f8fa;
+    background: #000;
 }
 
 .read-next-story.no-cover:before {
@@ -1244,16 +1244,16 @@ body:not(.post-template) .post-title {
 }
 
 .read-next-story.no-cover .post:before {
-    color: rgba(0,0,0,0.5);
-    border-color: rgba(0,0,0,0.2);
+    color: #fff;
+    border-color: rgba(255, 255, 255, 0.43)
 }
 
 .read-next-story.no-cover h2 {
-    color: rgba(0,0,0,0.8);
+    color: #fff;
 }
 
 .read-next-story.no-cover p {
-    color: rgba(0,0,0,0.5);
+    color: rgba(152, 152, 152, 1);
 }
 
 /* if there are two posts without covers, put a border between them */
@@ -1431,7 +1431,7 @@ body:not(.post-template) .post-title {
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         height: auto;
-        min-height: 240px;
+        min-height: 40px;
         height: 60vh;
         padding: 15% 0;
     }
@@ -1543,7 +1543,7 @@ body:not(.post-template) .post-title {
     }
 
     .read-next p {
-        display: none;
+        rgba(137, 137, 137, 1)
     }
 
     .read-next-story.no-cover + .read-next-story.no-cover {
